--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,11 +5,7 @@
     </head>
     <body>
         
-      <% if(kindOfDay=="friday"){  %>
-            <h1 style="color: purple"> <%= kindOfDay %> </h1>
-      <% } else{  %>
-            <h1 style="color: aqua;"> <%= kindOfDay %> </h1>
-      <%  }  %>
+      <h1> <%= kindOfDay %> </h1> 
  
     </body>  
 
